# datalab

./: .gitignore  .vbuild.yml  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.ts  main.ts  styles.css  theme.css
src-backend/: Cargo.toml
src-backend/src/: distill.rs  filters.rs  io.rs  lib.rs  models.rs  records.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  menu.rs  tauri_support.rs
src-tauri/src/commands/: dataset.rs  distill.rs  filters.rs  mod.rs  settings.rs
src/i18n/: en.json  index.ts  vi.json
src/lib/: api.ts  types.ts
