[package]
name = "datalab"
version = "0.1.2"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
datalab_backend = { path = "../src-backend" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
